--- a/css/style.css
+++ b/css/style.css
@@ -2341,7 +2341,7 @@ ul {
   height: 800px;
   position: relative;
   overflow: hidden;
-  background-image: url(../img/Gen/gen1.jpg);
+  background-image: url(../img/Gen/generators1.jpg);
   background-repeat: no-repeat;
   background-size: content;
   background-position: right top;
